[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI Screens/OptionsScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/theme.tres" type="Theme" id=2]

[node name="OptionsScreen" type="Node"]

script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -135.0
margin_right = 116.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "Theme" ]

[node name="VolumeContainer" type="HBoxContainer" parent="VBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 232.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="VolumeLabel" type="Label" parent="VBoxContainer/VolumeContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/VolumeContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 232.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 5.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
editable = true
tick_count = 11
ticks_on_borders = true
focus_mode = 2
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Controls Label" type="Label" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 22.0
margin_right = 232.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Controls"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="GridContainer" type="GridContainer" parent="VBoxContainer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 232.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Anchor", "Rect", "Size Flags" ]

[node name="ForwardLabel" type="Label" parent="VBoxContainer/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 2.0
margin_right = 128.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Forward"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ForwardButton" type="Button" parent="VBoxContainer/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_right = 232.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Q"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="BackLabel" type="Label" parent="VBoxContainer/GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 128.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Back"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackButton" type="Button" parent="VBoxContainer/GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 26.0
margin_right = 232.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Q"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="TurnCCWLabel" type="Label" parent="VBoxContainer/GridContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 128.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Turn CCW"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TurnCCWButton" type="Button" parent="VBoxContainer/GridContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 52.0
margin_right = 232.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Q"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="TurnCWLabel" type="Label" parent="VBoxContainer/GridContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 128.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Turn CW"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TurnCWButton" type="Button" parent="VBoxContainer/GridContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 78.0
margin_right = 232.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Q"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="ShootLabel" type="Label" parent="VBoxContainer/GridContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 106.0
margin_right = 128.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Shoot"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ShootButton" type="Button" parent="VBoxContainer/GridContainer" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 104.0
margin_right = 232.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Q"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="PauseLabel" type="Label" parent="VBoxContainer/GridContainer" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 128.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pause"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PauseButton" type="Button" parent="VBoxContainer/GridContainer" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 130.0
margin_right = 232.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Q"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="HighScoresLabel" type="Label" parent="VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 200.0
margin_right = 232.0
margin_bottom = 218.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "High Scores"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResetScoresButton" type="Button" parent="VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 222.0
margin_right = 232.0
margin_bottom = 244.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset"
flat = false
align = 1

[node name="HighScoreResetConfirmation" type="ConfirmationDialog" parent="." index="1"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -53.0
margin_right = 160.0
margin_bottom = 53.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
popup_exclusive = false
window_title = ""
resizable = false
dialog_text = " Are you sure you 
want to delete all 
   highscores?"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog", "Popup", "Theme" ]

[node name="ScoresResetOK" type="AcceptDialog" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -32.0
margin_right = 112.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
popup_exclusive = false
window_title = ""
resizable = false
dialog_text = "Scores reset."
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog", "Theme" ]

[connection signal="pressed" from="VBoxContainer/GridContainer/ForwardButton" to="." method="_on_ForwardButton_pressed"]

[connection signal="pressed" from="VBoxContainer/GridContainer/BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="VBoxContainer/GridContainer/TurnCCWButton" to="." method="_on_TurnCCWButton_pressed"]

[connection signal="pressed" from="VBoxContainer/GridContainer/TurnCWButton" to="." method="_on_TurnCWButton_pressed"]

[connection signal="pressed" from="VBoxContainer/GridContainer/ShootButton" to="." method="_on_ShootButton_pressed"]

[connection signal="pressed" from="VBoxContainer/GridContainer/PauseButton" to="." method="_on_PauseButton_pressed"]

[connection signal="pressed" from="VBoxContainer/ResetScoresButton" to="." method="_on_ResetScoresButton_pressed"]

[connection signal="confirmed" from="HighScoreResetConfirmation" to="." method="_on_HighScoreResetConfirmation_confirmed"]


